# python-cli-app-package-template

./: .env.sample  LICENSE  README.md  setup.cfg
src/your_cli_app/: __init__.py  cli.py  pidfile.py  singleton.py
src/your_cli_app/conf/: __init__.py  global_settings.py
