[metadata]
name = py-cli-app-template
version = 0.0.1
author = Change To You
author_email = your@email.domain
description = Templates for Python-based CLI application packaged for PyPI-type repository
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lialsoftlab/python-cli-app-package-template
project_urls =
    Bug Tracker = https://github.com/lialsoftlab/python-cli-app-package-template/issues
classifiers =
    Programming Language :: Python :: 3
    License :: MIT
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    Click<9.0.0
    python-dotenv<=1.0.0
    portalocker
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    yourcliapp = your_cli_app.cli:cli
